--- a/todolist/templates/todolist/base.html
+++ b/todolist/templates/todolist/base.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
-    <title>关于本站</title>
+    <title>
+        {% block 标题 %}
+            未命名
+        {% endblock %}
+    {% block unknown %}
+
+    {% endblock %}
+    </title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -23,6 +29,12 @@
         nav input{
           width: 39%!important;
         }
+        .no-underline>tr>td>a:hover{
+          text-decoration: none;
+        }
+        #line-through{
+          text-decoration: line-through;
+        }
     </style>
   </head>
 
@@ -34,26 +46,27 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item ">
-            <a class="nav-link" href="{%  url '主页' %}">待办清单</a>
+          <li class="nav-item {% block 待办高亮 %}{% endblock %}">
+            <a class="nav-link" href="{% url 'todolist:主页' %}">待办清单</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="{%  url '主页' %}">关于本站</a>
+          <li class="nav-item {% block 关于高亮 %}{% endblock %}">
+            <a class="nav-link" href="{% url 'todolist:关于' %}">关于本站</a>
           </li>
         </ul>
-        <form class="form-inline mt-2 mt-md-0 col-7 justify-content-end">
-          <input class="form-control mr-sm-2" type="text" placeholder="待办事项" aria-label="Search">
+        <form class="form-inline mt-2 mt-md-0 col-7 justify-content-end" action="" method="post">
+            {% csrf_token %}
+          <input name="待办事项" class="form-control mr-sm-2" type="text" placeholder="待办事项" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">添加</button>
         </form>
       </div>
     </nav>
 
-    <main role="main" class="container">
-      <br>
-      <h4>一款小巧、简洁的待办清单工具，帮你规划日常事务。</h4>
-    </main>
+{% block 主体 %}
 
-    <!-- Bootstrap core JavaScript
+{% endblock %}
+
+
+      <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
